--- a/app/globals.css
+++ b/app/globals.css
@@ -26,3 +26,15 @@ body {
     text-wrap: balance;
   }
 }
+
+.green-underline {
+  text-decoration: none; /* Remove default underline */
+  display: inline-block;
+  border-bottom: 4px solid #1ed760; /* Set the green line */
+  color: black; /* Set the text color */
+  padding-bottom: 6px;
+}
+
+.shadow {
+  box-shadow: 0px 6px 4px 0px rgba(0, 0, 0, 0.25);
+}
